[package]
name = "distri-server-cli"
version = "0.3.7"
edition = "2021"
description = "Distri OSS server binary"

[features]
default = ["sqlite"]
sqlite = ["distri-core/sqlite", "distri-server/sqlite"]
postgres = ["distri-core/postgres", "distri-server/postgres"]
sqlite_vendored = [
  "sqlite",
  "distri-core/sqlite_vendored",
  "distri-server/sqlite_vendored",
]
postgres_vendored = [
  "postgres",
  "distri-core/postgres_vendored",
  "distri-server/postgres_vendored",
]
otel = ["distri-server/otel", "distri-core/otel"]
ui = ["distri-server/ui"]

[dependencies]
distri-core = { path = "../distri-core", version = "0.3.7", default-features = false }
distri-types = { path = "../../distri-types", version = "0.3.7" }
distri-filesystem = { path = "../../distri-filesystem", version = "0.3.7" }
distri-server = { path = "../distri-server", version = "0.3.7", default-features = false }
dotenv = "0.15"
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = { workspace = true }
tracing = "0.1"
tracing-subscriber = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
regex = "1.5"
toml = "0.9.5"
dirs = "5.0"

[[bin]]
name = "distri-server"
path = "src/main.rs"
